# automate_mappings

./: pyproject.toml
src/automate-mappings/: main.py  pheno_feature.yaml  pheno_feature_fixed.yaml
